Fix spacing issues on project-detail and about

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,12 +1,10 @@
 @import '.././app.component';
 /** mixins from app.component **/
-.container.about-me, .container.project-detail {
-  background-color: rgba(255, 255, 255, 0.75);
-  min-height: 100vh;
-}
 .about-me, .project-detail {
-  padding-left:50px;
+  background-color: rgba(255, 255, 255, 0.75);
+  min-height: 130vh;
   p, li {
+    text-align: justify;
     color: $pine;
   }
   color: $dark-red;
